# mcp-client-for-ollama

./: .env.example  .gitignore  ATLASCLOUD_REVIEW.md  DEV.md  INTEGRATION_SUMMARY.md  README.es.md  README.md  README.zh-CN.md  SECURITY.md  client.py  medium-draft.md  pyproject.toml  release-notes.md  server.py
.github/workflows/: ci.yml  dependency-review.yml  publish.yml  windows-smoke-test.yml
asciinema/: mcp-simple-client.cast
cli-package/: README.md  pyproject.toml
config/agents/: README.md  foundry_tester.yaml  hardhat_analyzer.json  web3_auditor.yaml
docs/: AGENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_SYSTEM.md  WEB3_AUDIT_QUICKSTART.md  WEB3_SETUP_GUIDE.md
examples/: README.md  filesystem_rag_example.py  multi_agent_example.py
mcp_client_for_ollama/: __init__.py  client.py  providers.py
mcp_client_for_ollama/agents/: __init__.py  base.py  rag.py  (+11 more)
scripts/: bump_version.py
tests/: test_agents.py  test_api_key_persistence.py  test_atlascloud_provider.py  test_cleanup_race_condition.py  test_client_input_routing.py  test_communication.py  test_config_manager.py  test_connector.py  test_fzf_style_completion.py  test_mcp_cli_commands.py  test_mcp_registry.py  test_memory.py  test_model_manager.py  test_prompt_handler.py  test_prompt_manager.py  test_quit_signal_routing.py  test_reasoning_effort.py  test_resource_parser.py  test_resources.py  test_sanitize.py  test_server_discovery.py  test_slash_command_execution.py  test_streaming_manager.py  test_system_prompt_manager.py  test_tool_rag.py  test_tool_rag_evaluation.py
(+40 files in other folders)
