[project]
name = "mcp-client-for-ollama"
version = "0.26.0"
description = "MCP Client for Ollama - A client for connecting to Model Context Protocol servers using Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jonathan Löwenstern"}
]
dependencies = [
    "mcp~=1.25.0",
    "ollama~=0.6.0",
    "prompt-toolkit~=3.0.52",
    "rich~=14.2.0",
    "typer~=0.21.0",
]

[project.scripts]
mcp-client-for-ollama = "mcp_client_for_ollama.cli:run_cli"
ollmcp = "mcp_client_for_ollama.cli:run_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/jonigl/mcp-client-for-ollama"
Issues = "https://github.com/jonigl/mcp-client-for-ollama/issues"

[tool.setuptools.packages.find]
include = ["mcp_client_for_ollama*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.1.0",
]
